chore: Fix CSS spacing and pseudo class

--- a/src/components/BreadcrumbBar.scss
+++ b/src/components/BreadcrumbBar.scss
@@ -2,6 +2,7 @@
   background: rgb(202, 201, 201);
   height: 50px;
   width: 100%;
+
   .u-container {
     display: flex;
     justify-content: space-between;
@@ -14,14 +15,14 @@
   list-style: none;
   margin: 0;
   padding: 0;
+
   a {
     color: black;
     text-decoration: none;
   }
-  li:not(:last-child) {
-    :after {
-      content: '>';
-      margin: 0 0.5rem;
-    }
+
+  li:not(:last-child):after {
+    content: '>';
+    margin: 0 0.5rem;
   }
 }
